# gtfs-station-stop

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: build-and-publish.yaml  pr-version-check.yaml  test.yaml
hooks/: hass_compat.sh
src/gtfs_station_stop/: __main__.py  alert.py  arrival.py  calendar.py  feed_subject.py  helpers.py  route_info.py  route_status.py  schedule.py  static_database.py  static_dataset.py  station_stop.py  station_stop_info.py  stop_times.py  trip_info.py  updatable.py  vehicle.py
tests/: conftest.py  fixtures.py  mock_feed_server.py  test_arrival.py  test_calendar.py  test_feed_subject.py  test_helpers.py  test_route_info.py  test_route_status.py  test_schedule.py  test_station_stop.py  test_station_stop_info.py  test_stop_times.py  test_trip_info.py
tests/__snapshots__/: test_schedule.ambr
tests/data/gtfs_static/: calendar.txt  calendar_dates.txt  routes.txt  stop_times.txt  trips.txt
tests/perf/: perf_schedule.py
