[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gtfs_station_stop"
version = "0.2.0"
authors = [
  { name="Benjamin Pearce", email="gtfs@bcpearce.com" },
]
description = "Package for reading and organizing GTFS data for a given station stop."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
